--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html><html rem=750><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>fruitfront</title><link href=css/chunk-1dad4d66.f0a09e6d.css rel=prefetch><link href=css/chunk-423cb937.524bc99e.css rel=prefetch><link href=css/chunk-4ab3cd39.ae300f47.css rel=prefetch><link href=css/chunk-4ada2c2e.2524a7e2.css rel=prefetch><link href=css/chunk-583181de.384e2bf5.css rel=prefetch><link href=css/chunk-5905f6b8.2b1c6b9f.css rel=prefetch><link href=css/chunk-786cac0d.8d16869a.css rel=prefetch><link href=css/chunk-84e6cf40.071ac2ab.css rel=prefetch><link href=css/chunk-f2786924.5a379ee8.css rel=prefetch><link href=js/chunk-1dad4d66.d5d9c809.js rel=prefetch><link href=js/chunk-2d229b2a.d2d7dea5.js rel=prefetch><link href=js/chunk-423cb937.9499b1e4.js rel=prefetch><link href=js/chunk-4ab3cd39.3640e670.js rel=prefetch><link href=js/chunk-4ada2c2e.05606c6b.js rel=prefetch><link href=js/chunk-583181de.cd28f951.js rel=prefetch><link href=js/chunk-5905f6b8.911095f0.js rel=prefetch><link href=js/chunk-786cac0d.168a95ec.js rel=prefetch><link href=js/chunk-84e6cf40.2b73171f.js rel=prefetch><link href=js/chunk-f2786924.180baf65.js rel=prefetch><link href=css/app.96850a4e.css rel=preload as=style><link href=css/chunk-vendors.949f32d8.css rel=preload as=style><link href=js/app.d0b1640a.js rel=preload as=script><link href=js/chunk-vendors.b01df347.js rel=preload as=script><link href=css/chunk-vendors.949f32d8.css rel=stylesheet><link href=css/app.96850a4e.css rel=stylesheet></head><body><div id=app></div><script src=js/chunk-vendors.b01df347.js></script><script src=js/app.d0b1640a.js></script></body></html>
+<!DOCTYPE html><html rem=750>
+<head>
+<meta charset=utf-8>
+<meta http-equiv=X-UA-Compatible content="IE=edge">
+<meta name=viewport content="width=device-width,initial-scale=1">
+<title>fruitfront</title>
+<link href=css/chunk-1dad4d66.f0a09e6d.css rel=prefetch>
+<link href=css/chunk-423cb937.524bc99e.css rel=prefetch>
+<link href=css/chunk-4ab3cd39.ae300f47.css rel=prefetch>
+<link href=css/chunk-4ada2c2e.2524a7e2.css rel=prefetch>
+<link href=css/chunk-583181de.384e2bf5.css rel=prefetch>
+<link href=css/chunk-5905f6b8.2b1c6b9f.css rel=prefetch>
+<link href=css/chunk-786cac0d.8d16869a.css rel=prefetch>
+<link href=css/chunk-84e6cf40.071ac2ab.css rel=prefetch>
+<link href=css/chunk-f2786924.5a379ee8.css rel=prefetch>
+<link href=js/chunk-1dad4d66.d5d9c809.js rel=prefetch>
+<link href=js/chunk-2d229b2a.d2d7dea5.js rel=prefetch>
+<link href=js/chunk-423cb937.9499b1e4.js rel=prefetch>
+<link href=js/chunk-4ab3cd39.3640e670.js rel=prefetch>
+<link href=js/chunk-4ada2c2e.05606c6b.js rel=prefetch>
+<link href=js/chunk-583181de.cd28f951.js rel=prefetch>
+<link href=js/chunk-5905f6b8.911095f0.js rel=prefetch>
+<link href=js/chunk-786cac0d.168a95ec.js rel=prefetch>
+<link href=js/chunk-84e6cf40.2b73171f.js rel=prefetch>
+<link href=js/chunk-f2786924.180baf65.js rel=prefetch>
+<link href=css/app.96850a4e.css rel=preload as=style>
+<link href=css/chunk-vendors.949f32d8.css rel=preload as=style>
+<link href=js/app.d0b1640a.js rel=preload as=script>
+<link href=js/chunk-vendors.b01df347.js rel=preload as=script>
+<link href=css/chunk-vendors.949f32d8.css rel=stylesheet>
+<link href=css/app.96850a4e.css rel=stylesheet>
+</head>
+<body>
+<div id=app></div>
+<script src=js/chunk-vendors.b01df347.js></script>
+<script src=js/app.d0b1640a.js></script>
+</body>
+</html>
